tests/ui/modules/transparent_with_derive_helper.stderr
error[E0659]: `transparent` is ambiguous
  --> $DIR/transparent_with_derive_helper.rs:8:7
   |
LL |     #[transparent]
   |       ^^^^^^^^^^^ ambiguous name
   |
   = note: ambiguous because of a name conflict with a builtin attribute
   = note: `transparent` could refer to a built-in attribute
note: `transparent` could also refer to the derive helper attribute defined here
  --> $DIR/transparent_with_derive_helper.rs:6:10
   |
LL | #[derive(AddTransparentHelper)]
   |          ^^^^^^^^^^^^^^^^^^^^

error[E0658]: the `#[transparent]` attribute is an experimental feature
  --> $DIR/transparent_with_derive_helper.rs:8:5
   |
LL |     #[transparent]
   |     ^^^^^^^^^^^^^^
   |
   = note: see issue #79260 <https://github.com/rust-lang/rust/issues/79260> for more information
   = help: add `#![feature(transparent_modules)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the `#[transparent]` attribute is an experimental feature
  --> $DIR/transparent_with_derive_helper.rs:13:1
   |
LL | #[transparent]
   | ^^^^^^^^^^^^^^
   |
   = note: see issue #79260 <https://github.com/rust-lang/rust/issues/79260> for more information
   = help: add `#![feature(transparent_modules)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: `#[transparent]` attribute cannot be used on struct fields
  --> $DIR/transparent_with_derive_helper.rs:8:5
   |
LL |     #[transparent]
   |     ^^^^^^^^^^^^^^
   |
   = help: `#[transparent]` can only be applied to modules

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0658, E0659.
For more information about an error, try `rustc --explain E0658`.
